DONE: First part learning GOTO: Project

--- a/views/partials/footer.twig
+++ b/views/partials/footer.twig
@@ -1,18 +1,5 @@
-{#header.twig#}
-
-<header>
+<footer>
     <div>
-        <img src="./img/log" alt="logo" />
+        <p>Copyright Ri7 2024</p>
     </div>
-
-    <nav>
-        <ul>
-            <li>
-                <a href="">Inscription</a>
-            </li>
-            <li>
-                <a href="">Connexion</a>
-            </li>
-        </ul>
-    </nav>
-</header>
+</footer>
