--- a/public/assets/styles/base.css
+++ b/public/assets/styles/base.css
@@ -6,5 +6,11 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-color: var(--var-bg-1);
+    background-color: #fefefe;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
 }
