--- a/views/base.twig
+++ b/views/base.twig
@@ -3,15 +3,20 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+                <link rel="stylesheet" href="../assets/styles/base.css" />
+
         {% block style %}
-        <link rel="stylesheet" href="../../public/assets/styles/base.css" />
         {% endblock %} 
         {% block title %}{% endblock %}
     </head>
     <body>
-        {% include "../partials/header.twig"%} 
-        {% block main %}{% endblock %} 
-        {% include "../partials/footer.twig" %}
+        {% include "./partials/header.twig" %} 
+        {% block main %}
+        
+        {% endblock %} 
+        
+        {% include "./partials/footer.twig" %}
+        
         {% block script %}{% endblock %}
     </body>
 </html>
